# webqa-plus

./: .dockerignore  .env.example  .gcloudignore  .gitignore  DEPLOY.md  Dockerfile  README.md  cloudbuild.yaml  config.yaml.example  deploy.sh  docker-compose.yml  objectives.app.aptlyflow.yaml  objectives.staging.busha.yaml  pyproject.toml
.github/workflows/: deploy-to-gcp.yml
benchmarks/: benchmarks.yaml  latest_benchmark_summary.md  runtime.aptlyflow_app.iteration1.yaml  runtime.aptlyflow_app.iteration2.yaml  runtime.aptlyflow_app.iteration3.yaml  runtime.busha_staging.iteration1.yaml  runtime.busha_staging.iteration2.yaml  runtime.busha_staging.iteration3.yaml
benchmarks/plans/: aptlyflow_app.iteration1.md  aptlyflow_app.iteration2.md  aptlyflow_app.iteration3.md  busha_staging.iteration1.md  busha_staging.iteration2.md  busha_staging.iteration3.md
frontend/: components.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  label.tsx  progress.tsx  select.tsx  switch.tsx  textarea.tsx
nginx/: nginx.conf
reports/videos/: e7c62749-b82e-4972-a1a4-22ba1e123209.webm
scripts/: _status.py  _test_template.py  analyze_report.py  benchmark_loop.py  multimodal_demo_report.py  overlay_dom_check.py  probe_cb_direct.py  probe_cb_visible.py  probe_create_business.py  probe_login_form.py  probe_mailinator.py  probe_signup.py  probe_signup_nav.py  probe_signup_screenshot.py  probe_signup_type.py  submit_without_fill_probe.py  validation_recovery_probe.py
src/: __init__.py
src/webqa_plus/: __init__.py  cli.py
src/webqa_plus/core/: agents.py  auth_handler.py  engine.py  graph.py  mcp_client.py  visual_overlay.py
src/webqa_plus/reporter/: __init__.py  pdf_generator.py  template.html.j2
src/webqa_plus/utils/: config.py  email_service.py  helpers.py  llm_providers.py  objectives.py  weasyprint_env.py
src/webqa_plus/web/: __init__.py  server.py
src/webqa_plus/web/static/css/: styles.css
src/webqa_plus/web/static/js/: app.js
src/webqa_plus/web/templates/: index.html
